--- a/pages/company/houbutuHG/harukaze/car/ax/AX1400.md
+++ b/pages/company/houbutuHG/harukaze/car/ax/AX1400.md
@@ -17,5 +17,5 @@ description: "はるかぜ鉄道の初代電動列車"
 また、両開き２ドアを採用し、ドアステップを設置することで、乗降時にホーム戸の隙間に落ちて轢かれる...というような事故を防止しています。
 
 ## 走行路線
-合計 0編成0両
-- 運用先の路線が開業していません
+合計 1編成3両
+- 取鳥鉄道博物館に展示中 (静態保存) `AX1399`
